--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Itels Words Data </title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>Hello .!</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Top Itels Words Data </title>
 
+        <link rel="stylesheet" href="./styles.css">
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 
-    <div id="words">
+    </head>
+    <body>
+        <h1>Top IELTS Words</h1>
+        <button onclick="downloadPDF()">Download as PDF</button>
 
-    </div>
+        <div id="words">
+            <!-- Your content here -->
+        </div>
 
-    <script src="./script.js"></script>
-</body>
+        <script src="script.js"></script>
+    </body>
+
 </html>
